--- a/package.json
+++ b/package.json
@@ -7,11 +7,16 @@
   },
   "dependencies": {
     "@apollo/client": "^3.5.10",
+    "@chakra-ui/react": "^1.8.8",
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
     "axios": "^0.26.1",
+    "framer-motion": "^6.3.3",
     "graphql": "^16.3.0",
     "mongodb": "^4.1.3",
     "next": "latest",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1"
   }
 }
