--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.26.1",
     "framer-motion": "^6.3.3",
     "graphql": "^16.3.0",
+    "moment": "^2.29.3",
     "mongodb": "^4.1.3",
     "next": "latest",
     "react": "^17.0.2",
