--- a/package.json
+++ b/package.json
@@ -21,5 +21,10 @@
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-moment": "^1.1.2"
+  },
+  "devDependencies": {
+    "@types/node": "^17.0.34",
+    "@types/react": "^18.0.9",
+    "@types/react-dom": "^18.0.4"
   }
 }
