--- a/package.json
+++ b/package.json
@@ -23,8 +23,6 @@
     "react-moment": "^1.1.2"
   },
   "devDependencies": {
-    "@types/node": "^17.0.34",
-    "@types/react": "^18.0.9",
-    "@types/react-dom": "^18.0.4"
+    "typescript": "^4.6.4"
   }
 }
