--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "@chakra-ui/react": "^1.8.8",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
+    "apollo-server-core": "^3.8.1",
+    "apollo-server-micro": "^3.8.1",
     "axios": "^0.26.1",
     "framer-motion": "^6.3.3",
     "graphql": "^16.3.0",
+    "micro": "^9.3.4",
     "moment": "^2.29.3",
     "mongodb": "^4.1.3",
     "next": "latest",
