--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@chakra-ui/react": "^1.8.8",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
+    "@neo4j/graphql": "^3.2.3",
     "apollo-server-core": "^3.8.1",
     "apollo-server-micro": "^3.8.1",
     "axios": "^0.26.1",
@@ -18,6 +19,7 @@
     "micro": "^9.3.4",
     "moment": "^2.29.3",
     "mongodb": "^4.1.3",
+    "neo4j-driver": "^4.4.5",
     "next": "latest",
     "react": "^17.0.2",
     "react-beautiful-dnd": "^13.1.0",
